--- a/client/src/sass/components/typograpfy/home/_homeEvents-typograpfy.scss
+++ b/client/src/sass/components/typograpfy/home/_homeEvents-typograpfy.scss
@@ -71,7 +71,7 @@
     }
 
     &__h5 {
-      font-size: 1.7rem;
+      font-size: 1.6rem;
       font-family: $font-8;
       font-weight: 600;
       line-height: 1.2;
